0.3.0 - 2013-02-12
	* Update to the Twitter Bootstrap 2.3.0
	* Temporary change the frontend display of meta titles
	* Copyright year is generated rather than hardcoded
	* Image itemprop added to the featured image of a recipe page

0.2.1 - 2013-01-21
	* Needed to add the height element back to recipe peepboxes

0.2.0 - 2013-01-21
	* schema.org tags have been added
	* Extra images can be added to recipes using === Images ===
	* Featured recipe images now link to the full size version
	* When the recipe was published has been added

0.1.0 - 2013-01-13
	* Initial Release